Color Style: Prevent Gap In Button

--- a/css/admin.less
+++ b/css/admin.less
@@ -2464,6 +2464,10 @@
 
 				.wp-color-result {
 					margin: 0;
+
+					.wp-color-result-text {
+						height: 28px;
+					}
 				}
 			}
 		}
